# ConnectInnova

./: .env  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/auth/: auth.py
backend/app/config/: config.py
backend/app/routers/: login.py  users.py
backend/tests/: conftest.py  utils.py
backend/tests/routers/: test_login.py  test_users.py
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/components/: ActionButton.tsx  CircularStepIndicator.tsx  FileUploadArea.tsx  UserProfile.tsx  app-sidebar.tsx  layout.tsx  project-stories-stepper.tsx
frontend/src/components/dashboard-page/: team-switcher.tsx
frontend/src/components/ui/: sidebar.tsx  stepper.tsx  textarea.tsx
frontend/src/screens/: error-page.tsx  home.tsx  login-page.tsx  profile-page.tsx  proj-user-stories-page.tsx
